Restructure of draw and gameboard